--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/_settings.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/_settings.scss
@@ -68,7 +68,7 @@ $black: #0a0a0a;
 $white: #fefefe;
 $body-background: #efefef;
 $body-font-color: $black;
-$body-font-family: "OpenSansRegular", 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif; //custom
+$body-font-family: "Open Sans", 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif; //custom
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
