--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/agents.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/agents.scss
@@ -197,12 +197,12 @@
   margin:          0;
   padding:         0;
   float:           right;
-  width:           350px;
   li {
-    width:       25%;
+    padding:     0 10px;
     border-left: 1px solid rgba(255, 255, 255, 0.12);
     text-align:  center;
     font-weight: 600;
+    margin-left: 10px;
     &:first-child {
       border: 0;
     }
@@ -289,7 +289,7 @@ $arrow-color: #000;
 }
 
 .agents-table-body {
-  margin-top: 166px;
+  margin-top: 153px;
   &.has-message {
     margin-top: 234px;
   }
@@ -387,14 +387,11 @@ $arrow-color: #000;
 }
 
 .has-build-details-drop-down {
+  @include icon-after($type: caret-down, $color: $dark-gray);
   position: relative;
   &:after {
-    content:      "";
-    position:     absolute;
-    bottom:       0;
-    margin:       0 0 4px 4px;
-    border-style: solid;
-    border-width: 5px 3px 0 3px;
-    border-color: #717171 transparent transparent transparent;
+    font-size: 10px;
+    color:     #5d5b5b;
+
   }
 }
